[package]
name = "mailto"
version = "0.1.0"
edition = "2021"
description = "A CLI to send emails right from the command line!"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.10.0-rc.4"
dotenv = "0.15.0"
regex = "1.5.4"